--- a/php/layout/head.phtml
+++ b/php/layout/head.phtml
@@ -45,3 +45,13 @@
     <!-- End Google Tag Manager -->
 <?php endif;?>
 <meta name="google-site-verification" content="ybBO275fA92_t_cLKj41ENu7nT8BWxwp5b2VnknKVI8" />
+
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="/images/favicon/site.webmanifest">
+<link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#4081ff">
+<link rel="shortcut icon" href="/images/favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#4081ff">
+<meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
+<meta name="theme-color" content="#4081ff">
