--- a/php/blocks/forms/formOneClick.phtml
+++ b/php/blocks/forms/formOneClick.phtml
@@ -1,7 +1,7 @@
 <?php
 $orderForm = $this->macros('emarket', 'createForm', ['emarket-purchase-oneclick']);
 ?>
-<form class="inputs" action="">
+<form class="inputs" action="" onsubmit="ym(80112226,'reachGoal','one_click_send')">
     <div id="one_click_order_optioned_properties">
         <!-- Сюда будут динамически подставлены опционные свойства конкретного товара
                 при нажатии на кнопку "Купить в один клик", если у товара есть такие свойства. -->
