--- a/php/catalog/product/main/price/index.phtml
+++ b/php/catalog/product/main/price/index.phtml
@@ -45,7 +45,7 @@ if(count($cartItems) > 0) {
               </svg><a href="">Нашли дешевле?</a> -->
             </div>
           </div>
-          <a class="btn btn--border desktop--hide buy_one_click_button item_one_click <?= $this->getBuyOneClickButtonClass($product) ?>">Купить в 1 клик</a>
+          <a class="btn btn--border desktop--hide buy_one_click_button item_one_click <?= $this->getBuyOneClickButtonClass($product) ?>" onclick="ym(80112226,'reachGoal','one_click')">Купить в 1 клик</a>
         </div>
 
         <div class="product__inner-postpone comparisons comparisons--bg comparisons--heart desktop--hide">
@@ -76,7 +76,7 @@ if(count($cartItems) > 0) {
             </div>
           </div>
         </div>
-        <a class="btn btn--border mobile--hide buy_one_click_button item_one_click <?= $this->getBuyOneClickButtonClass($product) ?>">Купить в 1 клик</a>
+        <a class="btn btn--border mobile--hide buy_one_click_button item_one_click <?= $this->getBuyOneClickButtonClass($product) ?>" onclick="ym(80112226,'reachGoal','one_click')">Купить в 1 клик</a>
         <!-- <div class="product__discount mobile--hide">
           <div class="discount">
             <svg viewBox="0 0 26 24" fill="none" xmlns="http://www.w3.org/2000/svg">
