--- a/php/content/pools/index.phtml
+++ b/php/content/pools/index.phtml
@@ -19,7 +19,7 @@ $catalog = $this->getProductsListFromCategory($variables['pageId'],100);
         <?php } ?>
     </div>
 <div class="center-wrap pt-2">
-    <div class="article pt-2">
+    <div class="article pt-2 poolPage_content">
         <?=$page->getValue('content')?>
     </div>
 </div>
