--- a/php/layout/main.phtml
+++ b/php/layout/main.phtml
@@ -527,9 +527,9 @@ if (!empty($variables['parents'])) {
           <h2 class="">Выберите ваш город</h2>
           <div class="popup-form__text mobile-popup-form__text">
             <div class="list-group">
-              <a href="/" class="list-group-item list-group-item-action region-modal__msk" id="">Москва</a>
-              <a href="/" class="list-group-item list-group-item-action region-modal__spb" id="">Санкт-Петербург</a>
-              <a href="/" class="list-group-item list-group-item-action region-modal__any">Другой город</a>
+              <a href="/" class="list-group-item list-group-item-action region-modal__msk" data-city="msk">Москва</a>
+              <a href="/" class="list-group-item list-group-item-action region-modal__spb" data-city="spb">Санкт-Петербург</a>
+              <a href="/" class="list-group-item list-group-item-action region-modal__any" data-city="any">Другой город</a>
             </div>
           </div>
           <h2 class="">Отображение валюты</h2>
