--- a/src/assets/css/blocks/popup.scss
+++ b/src/assets/css/blocks/popup.scss
@@ -169,6 +169,11 @@
     border-bottom: 1px dotted; 
     margin-right: 24px;
 }
+
+.city_toSelect {
+    color: #555!important;
+}
+
 .list-group-item:hover{
     color:#000
 }
