--- a/php/emarket/purchasing_one_step/cart.phtml
+++ b/php/emarket/purchasing_one_step/cart.phtml
@@ -7,6 +7,7 @@
  */
 
 $cart = $this->macros('emarket', 'cart');
+$productList = $this->getOrderItems($cart);
 $cart['drawFormButton'] = true;
 ?>
 
