--- a/src/assets/css/blocks/basket.scss
+++ b/src/assets/css/blocks/basket.scss
@@ -816,3 +816,44 @@ div.popup.mobile-cart_popup {
   padding-top: 4px;
   border-bottom: 1px solid #E2E6F0;
 }
+
+.cart-empty_container {
+  display: flex;
+  margin: 75px auto;
+  width: 767px;
+  justify-content: space-between;
+  @include mobile {
+    max-width: 100%;
+    display: block;
+  }
+}
+
+.cart-empty_content {
+  padding-top: 40px;
+  @include mobile {
+    margin-left: 35px;
+  }
+  h3 {
+    margin-bottom: 20px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 118%;
+  }
+  p {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 141.4%;
+    width: 240px;
+    margin-bottom: 25px;
+  }
+}
+
+.cart-empty_goHome {
+  padding: 15px 25px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 150%;
+}
