--- a/src/assets/css/blocks/catalog-list.scss
+++ b/src/assets/css/blocks/catalog-list.scss
@@ -19,7 +19,7 @@
         padding: 30px 15px;
         // margin-bottom: 30px;
         position: relative; 
-        justify-content: center;
+        justify-content: space-between;
         display: flex;
         flex-direction: column;
         box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1);
@@ -95,12 +95,12 @@
             transition: all .3s;
             @media screen and (max-width:$small_tablet) {
                // height: 300px;
-                height: 96px;
+                height: 146px;
             }
             img{
                 // max-height: 50%;
                 max-width: 90%;
-                max-height: 214px;
+                max-height: 100%;
             }
         }
         &:hover #{$p}__image{
