--- a/src/assets/css/blocks/search.scss
+++ b/src/assets/css/blocks/search.scss
@@ -104,7 +104,14 @@ width: 24px;
     }
     svg {
         position: absolute;
-        top: 38%;
-        right: 7%;
+        top: 28%;
+        right: 3%;
+    }
+}
+
+.search_mobile_button {
+    background: #F0F0F0!important;
+    &:hover {
+        filter: unset;
     }
 }
