--- a/src/assets/css/blocks/sections/product.scss
+++ b/src/assets/css/blocks/sections/product.scss
@@ -203,6 +203,9 @@
 
     &__tabs {
         padding-right: 15px;
+        @media screen and (max-width:$small-mobile) {
+            padding-left: 15px;
+        }
         &-row {
             display: flex;
             margin-bottom: 4.5rem;
@@ -545,7 +548,6 @@
                 left: 0px;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
             }
         }
         img {
@@ -557,6 +559,7 @@
         display: flex;
         padding-top: 2.5rem;
         padding-bottom: 2.5rem;
+        justify-content: center;
         .toogles__item-content{
             width: 48.4rem;
         }
@@ -1024,3 +1027,15 @@
       height: 21px;
       margin-bottom: -4px;
     }
+
+.poolPage_column {
+    @media screen and (max-width: $small_tablet){
+        padding-left: 15px;
+        .product__column-title {
+            margin: 2rem 0;
+        }
+        .product__specifications {
+            display: block;
+        }
+    }
+}
