--- a/src/assets/css/blocks/sections/services.scss
+++ b/src/assets/css/blocks/sections/services.scss
@@ -210,13 +210,15 @@
     }
 
     &__title {
-        font-weight: bold;
         font-size: 2.2rem;
         line-height: 1.2;
         color: #545454;
         margin-bottom: 2.7rem;
         position: relative;
         display: inline-block;
+        h4 {
+            font-weight: bold;
+        }
 
         @media screen and (max-width:$large_tablet) {
             margin-bottom: 1.3rem;
